# otus-Rust

./: .gitignore  Readme.md  docker-compose-rust.yaml  docker-compose.yaml
.docker/: Dockerfile  Dockerfile.rust
hw-1/: .dockerignore  Cargo.toml  Readme.md  docker-composer.test.yaml
hw-1/.docker/: Dockerfile.release
hw-11/device_grpc/: Cargo.toml
hw-11/device_quic/: Cargo.toml
hw-11/smart_house/: Cargo.toml
hw-12/: Cargo.toml
hw-12/src/: command.rs  lib.rs  visitor.rs
hw-2/: Cargo.toml  Readme.md  test.ipynb
hw-2/.ipynb_checkpoints/: Readme-checkpoint.md
hw-2/src/: main.rs
hw-3/: Cargo.toml  Readme.md  playground.rs  test.ipynb
hw-3/src/: main.rs
hw-4/: Cargo.toml  Readme.md
hw-4/src/: device.rs  house.rs  lib.rs  main.rs
hw-4/src/device/: outlet.rs  smart_device.rs  thermometer.rs
hw-4/src/device/smart_device/: outlet.rs  thermometer.rs
hw-4/src/house/: room.rs
hw-7/: Cargo.toml
hw-7/ctp/: Cargo.toml  build.rs
hw-7/ctp/proto/: devices.proto
hw-7/ctp/src/: client.rs  lib.rs  server.rs
hw-7/smart_house/: Cargo.toml
hw-7/smart_house/src/: device.rs  house.rs  lib.rs
hw-7/smart_house/src/device/: outlet.rs  thermometer.rs
hw-7/smart_house/src/house/: room.rs
hw-8/: Cargo.toml  Readme.md
hw-8/device_grpc/: Cargo.toml
hw-8/device_quic/: Cargo.toml
hw-8/device_quic/src/: common.rs
hw-8/smart_house/: Cargo.toml
hw-8/smart_house/src/: device.rs  house.rs  lib.rs
hw-8/smart_house/src/device/: smartdevice.rs  thermometer.rs
hw-8/smart_house/src/house/: room.rs
hw-9/: Cargo.toml
hw-9/src/: main.rs
hw-lib/device_grpc/: build.rs
hw-lib/device_grpc/src/: lib.rs
hw-lib/smart_house/: Cargo.toml
hw-lib/smart_house/src/: house.rs  lib.rs
hw-lib/smart_house/src/house/: room.rs
openchat/: .gitignore  Cargo.toml  readme
openchat/src/: main.rs  models.rs  token_output_stream.rs
quic/: Cargo.toml
quic/src/: common.rs  connection.rs
webserver/: Cargo.toml  Readme.md
webserver/src/: c_lib.rs  main.rs
webserver/templates/: base.html  index.html
