[package]
name = "hw1"                   # the name of the package
version = "0.0.1"               # the current version, obeying semver
authors = ["Yuriy Krasilnikov"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# name = "hw1"
# path = "src/lib/lib.rs"

# [[bin]]
# name = "hw1"
# path = "src/main.rs"

# [dependencies]