[package]
name = "hw2"                   # the name of the package
version = "0.0.1"               # the current version, obeying semver
authors = ["Yuriy Krasilnikov"]

[dependencies]
uuid = {version = "1.3.4", features = ["v4"]}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# name = "hw2"
# path = "src/lib/lib.rs"

# [[bin]]
# name = "hw2"
# path = "src/main.rs"

