[package]
name = "hw4"                   # the name of the package
version = "0.0.1"              # the current version, obeying semver
authors = ["Yuriy Krasilnikov"]

[dependencies]
uuid = {version = "1.4.1", features = ["v4"]}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# name = "hw4"
# path = "src/lib.rs"

# [[bin]]
# name = "hw4"
# path = "src/main.rs"

