[package]
name = "webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aide = { version = "0.12.0", features = ["axum", "redoc"] }
anyhow = "1.0.75"
askama = "0.12.1"
axum = "0.6.20"
clap = { version = "4.4.8", features = ["derive"] }
libloading = "0.8.1"
once_cell = "1.18.0"
schemars = "0.8.15"
serde = "1.0.190"
serde_json = "1.0.108"
time = "0.3.30"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["fs", "trace"] }
tower-sessions = "0.5.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = "1.5.0"
