[package]
name = "device_grpc"                  # the name of the package
version = "0.0.1"              # the current version, obeying semver
authors = ["Yuriy Krasilnikov"]
edition = "2021"

[dependencies]
gzip = "0.1.2"
thiserror = "1.0.48"
tonic = "0.10.0"
prost = "0.12"
prost-types = "0.12"

[build-dependencies]
tonic-build = "0.10.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "device_grpc"
path = "src/lib.rs"
